Actions
Bug #3503
closedusba doesn't initialize cc_no_resources, causes gibberish output in kstat:
Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
kernel
Start date:
2013-01-27
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:
Description
Rich:
> Sigh. I'm also getting gibberish output from this on i386, in the > usb_errors class, were I'm just getting junk text (random memory?) > between the header line and "Bit Stuffing Violations".
David:
this could be an uninitialized struct kstat_named field. like cc_no_resources. this is a bug in usba. http://src.illumos.org/source/xref/illumos-gate/usr/src/uts/common/io/usb/usba/hcdi.c#320 http://src.illumos.org/source/xref/illumos-gate/usr/src/uts/common/sys/usb/usba/hcdi.h#303
Updated by David Höppner over 10 years ago
- Status changed from New to In Progress
- % Done changed from 0 to 80
Updated by Rich Lowe over 10 years ago
- Status changed from In Progress to Resolved
- % Done changed from 80 to 100
Resolved in 7535ae1
Actions